Fixed alignment errors

--- a/src/components/homePage/HomePage.css
+++ b/src/components/homePage/HomePage.css
@@ -4,8 +4,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    /* background: linear-gradient(58deg, rgba(17, 138, 225, 0.43) 13.78%, rgba(22, 142, 229, 0.687012) 89.33%, rgba(28, 147, 234, 0.95) 107.25%); */
-    background-image: linear-gradient(113.86deg, #FFFFFF 19.97%, rgba(28, 147, 234, 0.95) 106.91%);
+    background: linear-gradient(58deg, rgba(17, 138, 225, 0.43) 13.78%, rgba(22, 142, 229, 0.687012) 89.33%, rgba(28, 147, 234, 0.95) 107.25%);
+    /* background-image: linear-gradient(113.86deg, #FFFFFF 19.97%, rgba(28, 147, 234, 0.95) 106.91%); */
 }
 .mainPageContent{
     position: relative;
@@ -68,7 +68,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);     
-    margin-top: 8%;  
+    margin-top: 12%;  
 }
 .copyrightText{
     position: relative;
